# sitemappy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: bump-version-main.yml  release-main.yml
src/sitemappy/: crawler.py  link_scraper.py  main.py
tests/: test_crawler.py  test_main_cli.py  test_sitemappy.py
