[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "sitemappy-cli"
version = "1.0.3"
description = "A Python library for crawling a website and returning a sitemap."
authors = [
    {name = "Daniel Wilton", email = "daniel.wilton.dw@outlook.com"},
]
dependencies = [
    "typer[all]>=0.12.3",
    "validators>=0.28.3",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
sitemappy = "sitemappy.main:app"
sitemappy-cli = "sitemappy.main:app"

[tool.pdm]
distribution = true
plugins = [
    "sync-pre-commit-lock"
]

[tool.pdm.dev-dependencies]
lint = [
    "commitizen>=3.27.0",
    "mypy>=1.10.0",
    "codespell>=2.3.0",
    "ruff>=0.4.7",
    "ruff-lsp>=0.0.53",
]
test = [
    "parameterized>=0.9.0",
    "coverage>=7.5.3",
    "pytest>=8.2.1",
]

[tool.mypy]
strict = true
disallow_untyped_defs = true

[tool.ruff.lint]
# List of all rules can be found here https://docs.astral.sh/ruff/rules/
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle
    "W",    # pycodestyle warnings
    "C901", # McCabe complexity
    "N",    # PEP8 Naming
    "UP",   # pyupgrade, upgrades outdated syntax to support `requires-python` version
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "PL",   # pylint
    "RUF",  # Ruff-specific rules
    "ARG",  # flake8-unused-arguments
    "I",    # isort
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.codespell]
skip = 'tests/*'

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 90
